<resources>
    <string name="app_name">RaspberryPiClient</string>
    <string name="proj_title">Autonomous Car with Android-Based Control</string>
    <string name="port">Port</string>
    <string name="ip">Raspberry Pi IP</string>
    <string name="connect">Connect</string>
    <string name="TCNJ">TCNJ School of Engineering</string>

    <string name="power">POWER</string>

    <!--secondary activity-->
    <string name="remote_control">Remote Control</string>
    <string name="set_instructions">Set Instructions</string>
    <string name="previous_runs">Previous Runs</string>
    <string name="calibrate">Calibrate</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="more">MORE!!</string>

    <string name="ip_num">192.168.4.1</string>
    <string name="port_num">4957</string>

    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="forward">F</string>
    <string name="left">L</string>
    <string name="right">R</string>
    <string name="back">B</string>
    <string name="OFF">stop</string>

    <!--set instructions activity-->
    <string name="run_name">Enter a Name for this Set</string>
    <string name="action">Action</string>
    <string name="dist">Distance</string>
    <string name="save">Save</string>
    <string name="add">+</string>
    <string name="instruction">Instructions :</string>

    <string-array name="instructions">
        <item>Forward</item>
        <item>Backward</item>
        <item>Left</item>
        <item>Right</item>
        <item>stop</item>
    </string-array>

    <!--calibrate activity-->
    <string name="Time">Time(ms)</string>
    <string-array name="options">
        <item>Distance</item>
        <item>Angle(Degrees)</item>
    </string-array>

</resources>
