<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondaryActivity">


    <Button
        android:id="@+id/remote_control"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/remote_control" />

    <Button
        android:id="@+id/set_instructions"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:layout_below="@+id/remote_control"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/set_instructions" />

    <Button
        android:id="@+id/previous_runs"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:layout_below="@+id/set_instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/previous_runs" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:layout_below="@+id/previous_runs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/disconnect" />

    <Button
        android:id="@+id/more"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:layout_below="@+id/disconnect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/more" />

</RelativeLayout>