<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualOverride">


    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/stop"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/OFF"
        android:background="@drawable/rounded" />

    <Button
        android:id="@+id/dc"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/disconnect"
        android:background="@color/RED" />

    <ImageButton
        android:id="@+id/forward"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="105dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="75dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/forward"
        app:srcCompat="@drawable/up"
        android:background="@drawable/rounded"/>

    <ImageButton
        android:id="@+id/right"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/right"
        app:srcCompat="@drawable/right"
        android:background="@drawable/rounded"/>

    <ImageButton
        android:id="@+id/left"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="150dp"
        android:layout_marginEnd="150dp"
        android:contentDescription="@string/left"
        app:srcCompat="@drawable/left"
        android:background="@drawable/rounded"/>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="75dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/back"
        app:srcCompat="@drawable/back"
        android:background="@drawable/rounded"/>

</RelativeLayout>